# 2026-MLP-causal-inference-workshop

./: .gitignore  README.md  REPO_ONBOARDING.md  TEAM_README.md  causal_inference_workshop.ipynb  causal_inference_workshop_no_code.html  data_descriptives.xlsx  manager_data.csv  requirements.txt  scenario2_workshop.ipynb  workshop_change_specification.md  workshop_pacing_80min.md  ~$Causal Inference Methods in Quasi-Experimental Settings.pptx
.github/: copilot-instructions.md
causal_inference_ai_agentic_workflow/: .gitignore  AGENTS.md  README.md  pyproject.toml
causal_inference_ai_agentic_workflow/.github/agents/: impact-eval-orchestrator.agent.md  implementer.agent.md  planner.agent.md  reviewer.agent.md
causal_inference_ai_agentic_workflow/.github/skills/causal-inference/: SKILL.md
causal_inference_ai_agentic_workflow/.github/skills/causal-inference/references/: code-recipes.md  dags-and-identification.md  design-playbook.md  diagnostics.md  gotchas-and-diagnostics.md  refutation-and-sensitivity.md  reporting-template.md  structural-models.md  study-design.md
causal_inference_ai_agentic_workflow/configs/: project.yaml
data/: data_descriptives.xlsx  generate_data.py  ground_truth.md  manager_data.csv
diagrams/: dag.r  diagrams.md  timeline.r
pregenerated_results/: ate_evalue_retention_survival.xlsx  ate_iptw_cox_time_interaction_IPTW_Cox_TimeInteraction_retention.xlsx  ate_iptw_gee_IPTW_GEE_manager_efficacy_index.xlsx  att_iptw_gee_IPTW_GEE_manager_efficacy_index.xlsx  att_iptw_gee_IPTW_GEE_workload_index_mgr.xlsx  overlap_diagnostics_summary.txt
(+35 files in other folders)
