[project]
name = "impact-eval-causal-inference"
version = "0.1.0"
description = "Impact evaluation and causal inference project"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.24",
	"pandas>=2.0",
	"pyarrow>=16.0",
	"pyyaml>=6.0",
	"scikit-learn>=1.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]
